Fix map thumbnails not collapsing correctly

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -648,6 +648,7 @@ span.game-mode-button {
     background-color: #7492f7;
     border-color: transparent;
     text-transform: none;
+    box-shadow: none;
 }
 
 .map-link:hover,
